# otawa-tricore

./: .gitignore  CMakeLists.txt  kind.nmp  sem.nmp  sem.tpl  target.nmp  tricore.cpp
